# Buddy_Robot

./: .gitignore  CHANGELOG.md  MANIFEST.md  PROJECT_CONTEXT.md  README.md
TODO/: 00_master_todo.md  01_clarifications_needed.md  02_first_30_days.md  03_hardware_research_backlog.md  04_software_milestones.md  05_safety_commissioning_todo.md  06_ai_prompting_workflow.md  README.md
assets/: README.md
assets/cad_placeholders/: README.md
assets/diagrams/: README.md  system_architecture_mermaid.md
assets/images/: README.md
devops/: README.md
docs/: README.md
firmware/: README.md
robot_ws/: README.md  SIMULATION_START_HERE.md
robot_ws/src/buddy_base/: CMakeLists.txt  README.md  package.xml
robot_ws/src/buddy_base/config/: README.md  base_controller(_IP).yaml  diff_drive_controller(_IP).yaml
robot_ws/src/buddy_base/docs/: README.md  base_control_contract.md
robot_ws/src/buddy_base/include/: README.md
robot_ws/src/buddy_base/include/buddy_base/: README.md  base_hardware_interface(_IP).hpp
robot_ws/src/buddy_base/launch/: README.md
robot_ws/src/buddy_base/src/: README.md  base_hardware_interface(_IP).cpp  can_bridge_node(_IP).cpp
robot_ws/src/buddy_diagnostics/: CMakeLists.txt  README.md  package.xml
robot_ws/src/buddy_diagnostics/config/: README.md  diagnostics(_IP).yaml
robot_ws/src/buddy_diagnostics/dashboards/: README.md
robot_ws/src/buddy_diagnostics/docs/: README.md
robot_ws/src/buddy_diagnostics/launch/: README.md  diagnostics.launch(_IP).py
robot_ws/src/buddy_diagnostics/nodes/: README.md  system_health_aggregator(_IP).py
robot_ws/src/buddy_manipulation/: CMakeLists.txt  README.md  package.xml
robot_ws/src/buddy_manipulation/config/: README.md  arm_placeholder_limits(_IP).yaml
robot_ws/src/buddy_manipulation/docs/: README.md  arm_selection_research.md
robot_ws/src/buddy_manipulation/launch/: README.md  manipulation.launch(_IP).py
robot_ws/src/buddy_manipulation/moveit_config/: README.md
robot_ws/src/buddy_navigation/: CMakeLists.txt  README.md  package.xml
robot_ws/src/buddy_navigation/behavior_trees/: README.md  navigate_replan_recover(_IP).xml
robot_ws/src/buddy_navigation/config/: README.md  ekf(_IP).yaml  nav2_params(_IP).yaml
robot_ws/src/buddy_navigation/docs/: README.md
robot_ws/src/buddy_navigation/launch/: README.md  navigation.launch(_IP).py
robot_ws/src/buddy_navigation/maps/: README.md
robot_ws/src/buddy_simulation/: CMakeLists.txt  README.md  package.xml
robot_ws/src/buddy_simulation/config/: README.md  sim_sensors(_IP).yaml
robot_ws/src/buddy_simulation/docs/: README.md  simulation_plan.md
robot_ws/src/buddy_simulation/launch/: README.md  gazebo_lab.launch.py  gz_sim.launch(_IP).py
robot_ws/src/buddy_simulation/models/: README.md
robot_ws/src/buddy_simulation/models/buddy_v0_1/: model.config  model.sdf
robot_ws/src/buddy_simulation/worlds/: README.md  empty_lab(_IP).sdf  empty_lab.sdf
tools/: README.md
(+217 files in other folders)
