<?xml version="1.0"?>
<package format="3">
  <name>buddy_navigation</name>
  <version>0.0.1</version>
  <description>Buddy Nav2, SLAM, and localization configs.</description>
  <maintainer email="todo@example.com">Buddy Robot Project</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
